--- a/.github/workflows/fenix-ci.yml
+++ b/.github/workflows/fenix-ci.yml
@@ -29,7 +29,7 @@ jobs:
           key: ${{ runner.os }}-${{ hashFiles('Cargo.lock') }}
           path: ~/.cargo
       - name: Build Native Package
-        run: nix build .#packages.default
+        run: nix build
       - name: Upload Native Build Artifacts
         uses: actions/upload-artifact@v3
         with:
@@ -51,7 +51,7 @@ jobs:
           key: ${{ runner.os }}-${{ hashFiles('Cargo.lock') }}
           path: ~/.cargo
       - name: Build ARMv7 Package
-        run: nix build .#packages.armv7
+        run: nix build .#armv7
       - name: Upload ARMv7 Build Artifacts
         uses: actions/upload-artifact@v3
         with:
