--- a/.github/workflows/fenix-ci.yml
+++ b/.github/workflows/fenix-ci.yml
@@ -84,4 +84,4 @@ jobs:
           path: ~/.cargo
       - name: Commit Check
         run: |
-          nix develop --ignore-environment .#lint --command ./misc/git-hooks/pre-commit
+          nix develop --ignore-environment --command ./misc/git-hooks/pre-commit
